--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@perawallet/connect": "^1.4.2",
     "@tailwindcss/vite": "^4.1.5",
     "@txnlab/use-wallet-react": "^4.0.1",
-    "@txnlab/use-wallet-ui-react": "^0.2.2",
+    "@txnlab/use-wallet-ui-react": "^0.2.3",
     "@txnlab/utils-ts": "^0.1.0",
     "@walletconnect/modal": "^2.7.0",
     "@walletconnect/sign-client": "^2.20.2",
     "algosdk": "^3.2.0",
+    "lucide-react": "^0.344.0",
     "lute-connect": "^1.6.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
