--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@blockshake/defly-connect": "^1.2.1",
     "@perawallet/connect": "^1.4.2",
+    "@supabase/supabase-js": "^2.39.0",
     "@tailwindcss/vite": "^4.1.5",
     "@txnlab/use-wallet-react": "^4.0.1",
     "@txnlab/use-wallet-ui-react": "^0.2.3",
@@ -22,10 +23,16 @@
     "@walletconnect/modal": "^2.7.0",
     "@walletconnect/sign-client": "^2.20.2",
     "algosdk": "^3.2.0",
+    "date-fns": "^3.0.0",
     "lucide-react": "^0.344.0",
     "lute-connect": "^1.6.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.48.0",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.20.0",
+    "@hookform/resolvers": "^3.3.0",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
